--- a/Band'um.mw
+++ b/Band'um.mw
@@ -1,3 +1,3 @@
-'''Band'um''' is een bandtyn wat besteyt uut wat junger uut [[Banthum|Banthüm]]. Sy doot meystentyds covers spöälen en singen, mar mangs doot se ouk ear eigen leedtyns skryven. Vake doot se uptreaden in plaatselike feesttenten of by brülftes. Ear name is een verbastering van de name van et dorp van oorsprung en et feit dat se een musikband bint.
+'''Band'um''' is een bandtyn wat besteyt uut wat junger uut [[Banthum|Banthüm]]. Sy spöälet en singet meystentyds covers, mar mangs doot se ouk ear eigen leedtyns skryven. Vake doot se uptreaden in plaatselike feesttenten of up brülftes. Ear name is een verbastering van de name van et dorp van oorsprung en et feit dat se een musikband bint.
 
 {{Dialekt|sdz}}
