*Empty MediaWiki Message*

--- a/Band'um.mw
+++ b/Band'um.mw
@@ -1,3 +1,9 @@
-'''Band'um''' is een bandtyn wat besteyt uut wat junger uut [[Banthum|Banthüm]]. Sy spöälet en singet meystentyds covers, mar mangs doot se ouk ear eigen leedtyns skryven. Vake doot se uptreaden in plaatselike feesttenten of up brülftes. Ear name is een verbastering van de name van et dorp van oorsprung en et feit dat se een musikband bint.
+'''Band'um''' is een bandtyn wat besteyt uut wat junger uut [[Banthum|Banthüm]]. Et is op erichted in 2012. Sy spöälet en singet meystentyds covers, van rock töt golden oldies en rock-'n-roll. Mar mangs doot se ouk ear eigen leedtyns skryven. Vake doot se uptreaden in de feesttenten in de streake of up brülftes. Ear name is een verbastering van de name van et dorp van oorsprung en et feit dat se een musikband bint.
+
+==Bandleaden==
+*
+*
+*
+*
 
 {{Dialekt|sdz}}
