*Empty MediaWiki Message*

--- a/Band'um.mw
+++ b/Band'um.mw
@@ -1,6 +1,6 @@
-'''Band'um''' is een bandtyn wat besteyt uut wat junger uut [[Banthum|Banthüm]]. Et is op erichted in 2012. Sy spöälet en singet meystentyds covers, van rock töt golden oldies en rock-'n-roll. Mar mangs doot se ouk ear eigen leedtyns skryven. Vake doot se uptreaden in de feesttenten in de streake of up brülftes. Ear name is een verbastering van de name van et dorp van oorsprung en et feit dat se een musikband bint.
+'''Band'um''' is een bandtie wat bestiet uut wat jongens uut [[Banthum|Banthum]]. 't Hef op-ericht in 2012. Zi-j speult en zingt meestentieds covers, van rock töt golden oldies en rock-'n-roll. Mar mangs doet ze ok eer eigen liedties skrieven. Vake doet ze optreden in de feesttenten in de strekke of op brulftes. Eer name is een verbastering van de name van 't dorp van oorsprung en 't feit dat zi-j een muziekband bint.
 
-===Bandleaden===
+===Bandleden===
 *
 *
 *
