*Empty MediaWiki Message*

--- a/Utopie.mw
+++ b/Utopie.mw
@@ -4,7 +4,7 @@ Et woord kümt uut et [[Grieks|greeksk]] en hevt twey vöärvoogsels, wat twey b
 
 In de meyste skryverye -vöäral [[Sir Thomas More]] med syn book [[Utopia (book)|Utopia]] uut 1516, den as de term ouk bedached hevt- is een samenleaving dat in een utopy levt, in de tookumts; wår as de technology et menskvolk gelykwaerdig emaked hevt, alle hüse en stråten bint etsülvde en geyne hevt een eigen eigendom. Vake düs slim [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar y hebt der ouk wal wat skryvers by dee as so'n wearld beskreaven hebbed dee in et verleaden is. So as [[Jean-Jacques Rousseau]], den hümsülv vöärstelden dat mensken vroager leaveden as gelyke an andere deren. Dee mensken hadden geyn genöäl med wark, sociale verplichtings of ouk mar möilike gevölens. Töt dat eyne van ear sea dat een stükkyn land -wat hee ümtüünt har- van hüm war, en geyne anders. Toon is et gedunder begünt.
 
-As eyne et oaver utopy hevt, dan düt hee düs eigenlik syn idey van een perfekte samenleaving uut de döke. Et sol noit precys so in et echt kummen, mar der kan wal up an ewarkt wörden. Mangs müt y yts grouter maken as wat et weasen kan, ümme et in een kleindere förm in et echt edåne te krygen.
+As eyne et oaver utopy hevt, dan düt hee düs eigenlik syn idey van een perfekte samenleaving uut de döke. Et sol noit precys so in et echt kummen, mar der kan wal up hen ewarkt wörden. Mangs müt y yts grouter maken as wat et weasen kan, ümme et in een kleindere förm in et echt edåne te krygen.
 
 {{Dialekt|sdz}}
 [[Kategorie:Literatuur]]
