*Empty MediaWiki Message*

--- a/Germaanse_lotsbeduding.mw
+++ b/Germaanse_lotsbeduding.mw
@@ -1,7 +1,7 @@
 '''De germaanske bedüding van et lot''' geyt der van ho as de [[germanen]] oaver et lot dachtten. By ear was et lot de hougste macht, wår as de wearld achter an löpt.
 
 ==Lot==
-De germanen vöölden sich ait edreaven döär yts wat de wearld düt leaven en starven. Dit stünden sülvs boaven de goden en de vöärolder. Alles wörd döär et lot bepåld. Y künt u der alleynig mar an underwarpen, want der underuut kummen kan geyneyne neet. In et bekende angelsassiske heldendicht [[Beowulf]] hevt et lot ouk een belangryke rolle.
+De germanen vöölden sich ait edreaven döär yts wat de wearld düt leaven en starven. Dit stünden sülvs boaven de goden en de vöärolder. Alles wörd döär et lot eskikt. Y künt u der alleynig mar an underwarpen, want der underuut kummen kan geyneyne neet. In et bekende angelsassiske heldendicht [[Beowulf]] hevt et lot ouk een belangryke rolle.
 
 Een stükkyn uut de [[Heliand]] gevt et germaanske lotsbenül in eyne sinne mooi an:
 
