*Empty MediaWiki Message*

--- a/Animisme.mw
+++ b/Animisme.mw
@@ -1,4 +1,4 @@
-'''Animisme''' (van [[Oldgrieks|Oldgryks]] ''ἄνεμος'' 'geyst' of 'syle', gelyke-as [[Latiens|Latyms]] ''animus'') is de skrivtlose [[rilligie|religy]] van verskillende volker, vöäral [[jager-verzamelaar|jager-gadderaar]] volker. Van disse förme van gelöyv wörd esegt dat et de eyrste förme van menskelik gelöyv is. Dee lüde gelöyvt dat alles een geyst of sele hevt.
+'''Animisme''' (van [[Oldgrieks|Oldgreeksk]] ''ἄνεμος'' 'geyst' of 'sele', net as [[Latiens|Latynsk]] ''animus'') is de [[rilligie|religy]], sunder book of böke, van verskillende volker, vöäral [[jager-verzamelaar|jager-gadderaar]] volker. Van disse förme van gelöyv wörd esegt dat et de eyrste förme van menskelik gelöyv is. Dee lüde gelöyvt dat alles een geyst of sele hevt.
 
 ==Was is et==
 Et animisme geyt van et gelöyv dat alles een sele of een geyst hevt. [[Plaante|Planten]], [[dier|deren]] en [[stien|steyner]], mar ouk natuurkrachten so as [[onweer|dunder]] en [[regen|reagen]]. Sülvs abstrakte dinge as woorden en namen künt een geyst of sele hebben.
