*Empty MediaWiki Message*

--- a/Animisme.mw
+++ b/Animisme.mw
@@ -1,15 +1,15 @@
 '''Animisme''' (van [[Oldgrieks|Oldgreeksk]] ''ἄνεμος'' 'geyst' of 'sele', net as [[Latiens|Latynsk]] ''animus'') is de [[rilligie|religy]], sunder book of böke, van verskillende volker, vöäral [[jager-verzamelaar|jager-gadderaar]] volker. Van disse förme van gelöyv wörd esegt dat et de eyrste förme van menskelik gelöyv is. Dee lüde gelöyvt dat alles een geyst of sele hevt.
 
-==Was is et==
-Et animisme geyt van et gelöyv dat alles een sele of een geyst hevt. [[Plaante|Planten]], [[dier|deren]] en [[stien|steyner]], mar ouk natuurkrachten so as [[onweer|dunder]] en [[regen|reagen]]. Sülvs abstrakte dinge as woorden en namen künt een geyst of sele hebben.
+==Natuurgodsdeenst==
+Et animisme geyt van et gelöyv dat alles een sele of een geyst hevt. [[Plaante|Planten]], [[dier|deren]] en [[stien|steyne]], mar ouk natuurkrachten so as [[onweer|dunder]] en [[regen|reagen]]. Sülvs abstrakte dinge as woorden en namen künt een geyst of sele hebben.
 
-Eigenlik is animisme geyn religy up sichsülven, mar hevt völle dinge gelieke as in andere religys. Animisme is een [[Natuurgodsdienst|natuurgodsdeenst]] wårmed geysten- en vöärolderverearing de belangrykste dinge bint. Een animist gelövt in et bestån van gode en kwåde geysten. Den künt leaven op boumeb, deren en spüllegys. De geyeten müttet ear vake good te passe ehölden wörden, döär byvöärbeyld ovvers, et holden van rituelen, dansen en et holden van tabureagels. Animisme geyt et heyle leaven van de lüde wülk et anhanget an.
+Eigenlik is animisme geyn religy up sichsülven, mar hevt vöäle dinge gelyke as in andere religys. Animisme is een [[Natuurgodsdienst|natuurgodsdeenst]] wårmed geysten- en vöärolderverearing de belangrykste dinge bint. Een animist gelövt in et bestån van goden en kwåde geysten. Den künt leaven up boumen, deren en spüllegyns. De geysten müttet ear vake good te passe ehölden wörden, döär byvöärbeyld ovvers, et holden van rituelen, dansen en et holden van tabureagels. Animisme geyt et heyle leaven van de lüde wülk et anhanget an.
 
 By et animisme valt up:
-* Dat der up geyn wyse een idey besteyt van almachtige goden of [[God]], of ouk mar yts god-achtigs. Vake wörd der espröäken van een 'Houchste Weysen'.
-* Dat der, eaven-eyns, geyn metafysika med spölt: et is gewoon de direkte natuur. De natuur is sülv et heiligsten, en pröt döär et natuurlike geböären.
-* Dat der geyn (grouts) ebouwde tempels bint.
-* Dat der enkel godsdeenstige en alledaagse reagels beståt wat kumt uut en vöär de natuur.
+* Dat der up geyn wyse een idey besteyt van almachtige goden of [[God]], of ouk mar yts god-achtigs. Vake wörd der espröäken van een 'Hougste Weasen'.
+* Dat der, eaven-eyns, geyn metafysika med spöält: et is gewoon de direkte natuur. De natuur is sülv et heiligsten, en pröt döär et natuurlike geböären.
+* Dat der geyn (groutsk) ebouwde tempels bint.
+* Dat der enkel godsdeenstige en alledaagske reagels beståt wat kumt uut en vöär de natuur.
 
 ==Volker==
 Der bint vandage an den dag noch vöäl volker dee dit soort gelöyv anhold. So as de [[San]] ov de [[Inhiemse Amerikaann|Inheemse Amerikanen]]. Alles terügge berekkend kumt al et gelöyv van mensken van et animisme of. Vöär dat et [[christendom|christendom]] up [[Europa|Europa]] ankwam, hadden de [[Germanen]] noch een godsdeenst wat vöäle van et anismisme vord had. En et gelöyv van de kelten en germanen wördet nu, in een moderne förme, wear döär [[Heidndom|heidense]] stroumings as [[Druidisme]] en [[Asatru]] edåne. Astru is sünds de jåren 70. een officiele godsdeenst is in [[Ieslaand|Ysland]].
