--- a/Animisme.mw
+++ b/Animisme.mw
@@ -12,7 +12,7 @@ By et animisme valt up:
 * Dat der enkel godsdeenstige en alledaagske reagels beståt wat kumt uut en vöär de natuur.
 
 ==Volker==
-Der bint vandage an den dag noch vöäl volker dee dit soort gelöyv anhold. So as de [[San]] ov de [[Inhiemse Amerikaann|Inheemse Amerikanen]]. Alles terügge berekkend kumt al et gelöyv van mensken van et animisme of. Vöär dat et [[christendom|christendom]] up [[Europa|Europa]] ankwam, hadden de [[Germanen]] noch een godsdeenst wat vöäle van et anismisme vord had. En et gelöyv van de kelten en germanen wördet nu, in een moderne förme, wear döär [[Heidndom|heidense]] stroumings as [[Druidisme]] en [[Asatru]] edåne. Astru is sünds de jåren 70. een officiele godsdeenst is in [[Ieslaand|Ysland]].
+Der bint vandage an den dag noch vöäl volker dee dit soort gelöyv anholdet. So as de [[San]] of de [[Inhiemse Amerikaann|Inheymse Amerikanen]]. Alles terügge bereakend kümt al et gelöyv van mensken van et animisme of. Vöär dat et [[christendom|christendom]] up [[Europa|Europa]] ankwam, hadden de [[germanen]] noch een godsdeenst wat vöäle van et anismisme vord had. En et gelöyv van de kelten en germanen wördet nu, in een moderne förme, wear döär [[Heidndom|heidenske]] stroumings as [[Druidisme]] en [[Asatru]] edåne. Astru is sünds de jåren 70. een officiele godsdeenst is in [[Ieslaand|Ysland]].
 
 Mensken dee gelöyvet dat alles op aerde bepålde krachten hevt, bint animisten. Dunder, reagen, wind en vüür bint krachten, mar ouk de [[Zunne|sünne]], de [[Moane|måne]], reviren, sand, rotsen. Mensken andere deren, planten en vöärwarpen hebbet volgens animisten ouk krachten.
 
