--- a/Fuut.mw
+++ b/Fuut.mw
@@ -36,6 +36,7 @@ Bestaand:Podiceps_cristatus_2_(Marek_Szczepanek).jpg
 Bestaand:Podiceps_cristatus_1_(Marek_Szczepanek).jpg
 Bestaand:Podiceps_cristatus_3_(Marek_Szczepanek).jpg
 Bestaand:Podiceps_cristatus_4_(Marek_Szczepanek).jpg
+Podiceps cristatus MHNT.ZOO.2010.11.38.1.jpg |Museum specimen 
 </gallery>
 
 == Referensies ==
