*Empty MediaWiki Message*

--- a/Chili.mw
+++ b/Chili.mw
@@ -17,7 +17,7 @@
 | tld = cl | laandcode = CHL | til = 56
 }}
 [[Bestaand:Pueblo de San Pedro de Atacama 2013-09-21 11-52-31.jpg|thumb|Atacama]]
-'''Chili''' ([[Spaans]]: ''Chile'') is n land in [[Zuud-Amerika]], en ligt an de grens met [[Peru]], [[Bolivia]] en [[Argentinië]]. Chili ligt in-eklemd tussen de [[Grote Oseaan]] en t [[Andes]]gebärgte. De [[heufdstad|eufdstad]] is [[Santiago (Chili)|Santiago]], t parlement ef zien zetel in [[Valparaíso]]. 
+'''Chili''' ([[Spaans]]: ''Chile'') is n land in [[Zuud-Amerika]], en ligt hai aiddhhn cdjjr  wdjjsd jfv hs vjsd hcens met [[Peru]], [[Bolivia]] en [[Argentinië]]. Chili ligt in-eklemd tussen de [[Grote Oseaan]] en t [[Andes]]gebärgte. De [[heufdstad|eufdstad]] is [[Santiago (Chili)|Santiago]], t parlement ef zien zetel in [[Valparaíso]]. 
 
 t [[Juan Fernández-archipel]], [[Desventuradaseilanden]] en [[Paoseiland]], dät ärg wied in t westen van t vasteland ligt, euren ok bi'j Chili. t Land määkt naor eigen zeggen ok anspraok op n stuk van [[Antarktika]] (dät tegeliekertied grotendeels ok deur [[Argentinië]] opeist wordt). Um disse reden stiet de obelisk die t offisiële geografiese middelpunt van Chili markeert ok in t zuden, bi'j de stad Punta Arenas, kortbi'j [[Vuurland]]. 
 
