--- a/Chili.mw
+++ b/Chili.mw
@@ -54,7 +54,7 @@ n Paor andere pläätsen bint:
 * [[Valparaíso (stad)|Valparaíso]]  
 
 == De muuite weerd um te bekieken ==
-* Nasionaal park Rapa Nui
+* Nasionaal park Rapa Nui                    ZEG WOLLAH A SHAGBE
 * Kärken van [[Chiloé]] 
 * Istoriese wiek van de ävenstad [[Valparaíso]] 
 * [[Salpetergroeves Humberstone]] en [[Santa Laura]] 
