*Empty MediaWiki Message*

--- a/Kareelsk.mw
+++ b/Kareelsk.mw
@@ -1,4 +1,4 @@
-'''Kareelsk''' (eygenspråklik ''karjalan kieli''), is en [[finno-ugriske språken|finno-ugriske språke]], dee in [[Rusland]] un [[Finland]] sproaken wardt.
+'''Kareelsk''' (eygenspråklik ''karjalan kieli'') is en [[finno-ugriske språken|finno-ugriske språke]], dee in [[Rusland]] un [[Finland]] sproaken wardt.
 
 == Eksempels ==
 
