*Empty MediaWiki Message*

--- a/Kareelsk.mw
+++ b/Kareelsk.mw
@@ -10,7 +10,7 @@
 * Danke ouk - ''Passibo''
 * Ik heyte... - ''Minuu kučutah...''
 * Myn moderspråke is sassisk. - ''Minun muamonkieli on alasaksi.''
-* Ik snakke neyn russisk/finsk. - ''En pagize ven'an/suomen kieldy.''
+* Ik snakke neyn russisk/finsk. - ''En pagize ven'akse/suomekse.''
 * Ik wil meyr kareelsk leyren. - ''Tahton opastuo enämbi karjalan kieleh.''
 * Ik bin språkaktivist. - ''Olen kieliaktivistu.''
 * Wårüm hebbet Jy neyn spyskaarte up kareelsk? - ''Mindäh teil eule syömislistua karjalakse?''
