/* Et seisoon van 2007: Nen rekordbrekkend beginnersjår */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -49,23 +49,23 @@ Hamilton endigden tweyds achter Alonso in Monaco en achterav suggereden hy dat h
 
 Döär dardes too endigen up Magny-Cours achter Ferrarikoureurs Kimi Räikkönen en Felipe Massa, breidden Hamilton syne vöärsprong in et kampioonskap uut når 14 pünten. In Hamilton synen eyrsten thuuswedstryd up Silverstone endigden hy dardes en evenareden et rekord van Jim Clark uut 1963 van 9 podium finishes up nen ry vöär nen britsken koureur.
 [[Bestaand:Hamilton_US_'07_(cropped).jpg|links|duum|Hamilton nådat hy de leiding had enommen in den Grouten Prys van de Vereynigde Ståten in 2007]]
-Tydens de kwalifikatsy vöär den europaesken Grand Prix, botseden Hamilton up de Schumacherversmalling nå nen probleem med de raddop veroorsaked by et radpistool dat vöär dissen wågen gebruukt was. Hy wyr når et medisk centrum van et cirkwit ebracht up nen brankard med nen süürstovmasker en infuus, mår was undertüssen by bewüstsyn. Hy was neet in ståt üm de kwalifikatsy too voltoien en starteden dårüm up de tynde positsy. Nå nen låtsten medisken check up sundagmörgen, kreg Hamilton toostemming üm too racen. Tydens ne heavige reagenbuie dee uutendelik de race underbrak, gleden Hamilton van de båne in nen grindbak, mår ümdat synen motor et blev doon, wyr hy terügesettet up et cirkwit en mocht hy de race vervolgen nå de hervatting. Syne neagende plåtse in disse race was syne eyrste finish buuten et podium en sunder pünten. Twyvelachtigerwys wyr Hamilton den eyrsten en eynigen koureur van wy synen wågen esleped en terügesettet up de båne wyr döär nen krånwågen tydens ne Formule Eyn race. De FIA verbad as gevolg dårvan vortan et gebruuk van mechaniske assistentsy üm nen wågen terüg up de båne too sleppen.
+Tydens de kwalifikatsy vöär den europaesken Grand Prix, botseden Hamilton up de Schumacherversmalling nå nen probleem med de raddop veroorsaked by et radpistool dat vöär dissen wågen gebruukt was. Hy wyr når et medisk centrum van et cirkwit ebracht up nen brankard med nen süürstovmasker en infuus, mår was undertüsken by bewüstsyn. Hy was neet in ståt üm de kwalifikatsy too voltoien en starteden dårüm up de tynde positsy. Nå nen låtsten medisken check up sundagmörgen, kreg Hamilton toostemming üm too racen. Tydens ne heavige reagenbuie dee uutendelik de race underbrak, gleden Hamilton van de båne in nen grindbak, mår ümdat synen motor et blev doon, wyr hy terügesettet up et cirkwit en mocht hy de race vervolgen nå de hervatting. Syne neagende plåtse in disse race was syne eyrste finish buuten et podium en sunder pünten. Twyvelachtigerwys wyr Hamilton den eyrsten en eynigen koureur van wy synen wågen esleped en terügesettet up de båne wyr döär nen krånwågen tydens ne Formule Eyn race. De FIA verbad as gevolg dårvan vortan et gebruuk van mechaniske assistentsy üm nen wågen terüg up de båne too sleppen.
 
-Hamilton wön den hongaarsken Grand Prix vanvav eyrste positsy nå ne twyvelachtige kwalifikatsysessy. Alonso had den snelsten tyd neaderesettet, mår was vyv plåtsen in den uutslag terügesettet ümdat hy Hamilton gehinderd had üm up tyd uut de pitstråte too vertrekken vöär et voltoien van syne låtste runde. Nå de race  verklåreden Hamilton dat hy de betrekkingen med Alonso hersteld had. By den türksken Grand Prix had Hamilton nen lekken band den leidden töt ne vyvde plåtse. Alonso versloog Hamilton in de Groute Prys van Italie en Belgie, wårdöär Hamilton nen vöärsprong van twey pünten oaverhyld. Hy breidden syn vöärsprong uut når 12 pünten nå et winnen van den japansken Grand Prix in heavige reagen nådat Alonso was uutevallen. Nå de race, wyr Hamilton undersocht döär de racejury vöär syne betrokkenheyd by nen incident achter den safety car; sowal Sebastian Vettel as Mark Webber vylen uut de race terwyl sy hem volgeden mår et dreetal wyr vryesprökken up den vrydag van et chineesken Grand Prixweekende. By den chineesken Grand Prix begön Hamilton vanav eyrste positsy,mår slageden der neet in uut too ryden ümdat McLaren hem too lang up versletten banden had rund låten ryden (ündanks et advys van Bridgestone) en hy gleden in nen grindbak as hy up de pitstråte ankwameden. Hamilton ging de låtste race van et seisoon düs med veer en seaven pünten vöärsprong up Alonso respektivelik Räikkönen in.
+Hamilton wön den hongaarsken Grand Prix vanvav eyrste positsy nå ne twyvelachtige kwalifikatsysessy. Alonso had den snelsten tyd neaderesettet, mår was vyv plåtsen in den uutslag terügesettet ümdat hy Hamilton ehinderd had üm up tyd uut de pitstråte too vertrekken vöär et voltoien van syne låtste runde. Nå de race  verklåreden Hamilton dat hy de betrekkingen med Alonso hersteld had. By den türksken Grand Prix had Hamilton nen lekken band den leidden töt ne vyvde plåtse. Alonso versloog Hamilton in de Groute Prys van Italie en Belgie, wårdöär Hamilton nen vöärsprong van twey pünten oaverhyld. Hy breidden syn vöärsprong uut når 12 pünten nå et winnen van den japansken Grand Prix in heavige reagen nådat Alonso was uutevallen. Nå de race, wyr Hamilton undersocht döär de racejury vöär syne betrokkenheyd by nen incident achter den safety car; sowal Sebastian Vettel as Mark Webber velen uut de race terwyl sy hem volgeden mår et dreetal wyr vryesprökken up den vrydag van et chineesken Grand Prixweekende. By den chineesken Grand Prix begön Hamilton vanav eyrste positsy,mår slageden der neet in uut too ryden ümdat McLaren hem too lang up versletten banden had rund låten ryden (ündanks et advys van Bridgestone) en hy gleden in nen grindbak as hy up de pitstråte ankwameden. Hamilton ging de låtste race van et seisoon düs med veer en seaven pünten vöärsprong up Alonso respektivelik Räikkönen in.
 
-In den brasiliaansken Grand Prix endigen Hamilton seavendes en wön Räikkönen, wat beteakenden dat Hamilton tweyds wyr in et kampioonskap med eyn pünt verskil. In de eyrste runde wyr Hamilton vöärbyereden döär meyrdere wågens en vyl terüg når de achtste plåtse; acht runden låter kön hy neet skakelen når ne versnelling en blev 40 sekonden stån. Hy herstelleden sich når de seavende plåtse mår  Ferrari had öär twey koureurs ümewisseld sodat Räikkönen vöär et kampioonskap kön gån. Hamilton pakkeden et rekord van des werlds jüngeste individuele tweyde plåtse in et kampioonskap, med 22 jåren en 287 dågen, dårvöär sinds 1960 in handen van Bruce McLaren med 23 jåren en 5 dågen; et rekord van Hamilton is undertüssen verbrökken döär Sebastian Vettel in 2009.
+In den brasiliaansken Grand Prix endigen Hamilton seavendes en wön Räikkönen, wat beteakenden dat Hamilton tweyds wyr in et kampioonskap med eyn pünt verskil. In de eyrste runde wyr Hamilton vöärbyereden döär meyrdere wågens en vyl terüg når de achtste plåtse; acht runden låter kön hy neet skakelen når ne versnelling en blev 40 sekonden stån. Hy herstelleden sich når de seavende plåtse mår  Ferrari had öär twey koureurs ümewisseld sodat Räikkönen vöär et kampioonskap kön gån. Hamilton pakkeden et rekord van des werlds jüngeste individuele tweyde plåtse in et kampioonskap, med 22 jåren en 287 dågen, dårvöär sinds 1960 in handen van Bruce McLaren med 23 jåren en 5 dågen; et rekord van Hamilton is undertüsken verbrökken döär Sebastian Vettel in 2009.
 
-In oktober begön de FIA nen undersuuk når BMW Sauber en Williams vöär brandstovsjuumel; de BMWkoureurs waren vyvdes en sesdes geendigd en as sy uut den uutslag ehåled wyren, wårdöär Hamilton når de vyvde plåtse epromoveerd wördet en et werldkampioonskap med eyn pünt vöär Räikkönen wön. Uutendelik wyren beide teams neet estravd; McLaren ging in houger beroop. Hamilton vertelleden de BBC vervölgens dat hy de F1-titel neet winnen wül döär de kwalifikatsys van andere koureurs.
-[[Bestaand:Podium_2007_USGP.jpg|duum|Hamilton on the top podium position after winning the 2007 United States Grand Prix. He is flanked by teammate Fernando Alonso (left) and Felipe Massa (right).]]
+In oktober begön de FIA nen undersuuk når BMW Sauber en Williams vöär brandstovsjuumel; de BMWkoureurs waren vyvdes en sesdes geendigd en as sy uut den uutslag ehåled wyren, wårdöär Hamilton når de vyvde plåtse epromoveerd wördet, wön hy et werldkampioonskap med eyn pünt vöär Räikkönen. Uutendelik wyren beide teams neet estravd; McLaren ging in houger beroop. Hamilton vertelleden de BBC vervölgens dat hy de F1-titel neet winnen wül döär de kwalifikatsys van andere koureurs.
+[[Bestaand:Podium_2007_USGP.jpg|duum|Hamilton up de höygste podiumplåtse nådat hy den Groute Prys van de Vereynigde Ståten van 2007 had ewönnen. Nevven hem ståt teammåt Fernando Alonso (links) en Felipe Massa (rechts).]]
 
 ===== Spanningen in et team =====
-Hamilton's long relationship with Dennis began to fray<ref>{{cite web|title=Hamilton 2007 Pre-season interview|url=http://www.sportinglife.com/formula1/news/story_get.cgi?STORY_NAME=formula1/07/03/05/AUTO_Formula_One_Hamilton.html|work=Sporting Life|date=30 August 2007|accessdate=30 August 2007|deadurl=yes|archiveurl=https://web.archive.org/web/20070930055238/http://www.sportinglife.com/formula1/news/story_get.cgi?STORY_NAME=formula1%2F07%2F03%2F05%2FAUTO_Formula_One_Hamilton.html|archivedate=30 September 2007|df=dmy}}</ref> with the first public indication that Hamilton was unhappy with the team appearing after he finished second at Monaco in 2007. After post-race comments made by Hamilton which suggested he had been forced into a supporting role, the FIA investigated whether McLaren had broken rules by enforcing team orders.<ref name="inquiry">{{cite news|title=The FIA's McLaren-Monaco statement in full|publisher=Formula One|url=http://www.formula1.com/news/headlines/2007/5/6178.html|date=30 May 2007|accessdate=5 June 2007|deadurl=yes|archiveurl=https://web.archive.org/web/20080709064139/http://www.formula1.com/news/headlines/2007/5/6178.html|archivedate=9 July 2008|df=dmy}}</ref> McLaren denied favouring double world champion Fernando Alonso, and the FIA subsequently vindicated the team, stating that: "McLaren were able to pursue an optimum team strategy because they had a substantial advantage over all other cars. They did nothing which could be described as interfering with the race result".
+Hamiltons lange betrekkinge med Dennis begön too verslechteren by de eyrste publike anwysing dat Hamilton üngelükkig was med et uptreden van et team nådat hy tweyds was geendigd in Monaco in 2007. Nå upmarkingen nå de race emåkt döär Hamilton dee suggerereden dat hy was verplicht üm in ne understüttende rolle too ryden, undersücht de FIA ov McLaren de reagels had ebrökken döär teamorders up too leggen. McLaren untkenden dübbelen werldkampioon Fernando Alonso too bevöärdelen en dårup sprak de FIA et team vry döär too stellen dat: "McLaren was in ståt ne optimåle teamstrategy nå too streaven ümdat sy nen substantieel vöärdeyl hadden boaven alle andere wågen. Sy hebbet niks edåne dat beskreven kan wörden as ingrypend in et resultåt van de race".
 
-Tensions surfaced again at the 2007 Hungarian Grand Prix. During the final qualifying session for the race Hamilton was delayed in the pits by Alonso and thus unable to set a final lap time before the end of the session. McLaren pointed out that Hamilton had disobeyed an earlier instruction to let Alonso pass in qualifying, for fear of losing his own position.<ref>{{cite news|title=Dennis: Hold up is Hamilton's fault|publisher=GPUpdate|url=http://www.gpupdate.net/en/f1-news/162323/dennis-hold-up-is-hamilton-s-fault/|date=4 August 2007|accessdate=17 August 2010}}</ref> Alonso was relegated to sixth place on the starting grid, thus elevating Hamilton (who had originally qualified second) to first, while McLaren were docked Constructors' Championship points. Hamilton said he thought Alonso's penalty was "quite light if anything" and only regretted the loss of constructors' points.<ref>{{cite news|title=Chequered Flag (podcast)|network=BBC|station=BBC Radio Five Live|minutes=5:56}}</ref> Hamilton was reported to have sworn at Dennis on the team radio following the incident.<ref>{{cite news|title=Hamilton handed pole after Alonso punished|work=The Times|url=http://www.timesonline.co.uk/tol/sport/formula_1/article2199765.ece|date=5 August 2007|accessdate=7 August 2007|location=London|first=Alan|last=Baldwin}}</ref><ref>{{cite news|title=LEWIS F-WORD STORM|work=Daily Mirror|url=https://www.mirror.co.uk/sport/more-sport/2007/08/05/lewis-f-word-storm-98487-19574046/|date=5 August 2007|accessdate=7 August 2007|deadurl=yes|archiveurl=https://web.archive.org/web/20090430023436/http://www.mirror.co.uk/sport/more-sport/2007/08/05/lewis-f-word-storm-98487-19574046/|archivedate=30 April 2009|df=dmy}}</ref> British motorsport journal ''Autosport'' claimed that this "[led] Dennis to throw his headphones on the pit wall in disgust (a gesture that was misinterpreted by many to be in reaction to Alonso's pole)".<ref>{{cite news|title=Hamilton apologises to McLaren|work=Autosport|url=http://www.autosport.com/news/report.php/id/61385|date=5 August 2007|accessdate=7 August 2007}}</ref> However McLaren later issued a statement on behalf of Hamilton which denied the use of any profanity.<ref>{{cite news|title=McLaren: Lewis didn't swear at Dennis|url=http://www.itv-f1.com/News_Article.aspx?PO_ID=40329|publisher=itv-f1.com|date=9 August 2007|accessdate=9 August 2007|deadurl=yes|archiveurl=https://web.archive.org/web/20070929103031/http://www.itv-f1.com/News_Article.aspx?PO_ID=40329|archivedate=29 September 2007|df=dmy-all}}</ref> As a result of these events, the relationship between Hamilton and Alonso temporarily collapsed, with the pair not on speaking terms for a short period.<ref>{{cite news|title=Alonso is ignoring me&nbsp;– Hamilton|publisher=BBC Sport|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/6932653.stm|date=6 August 2007|accessdate=17 August 2010}}</ref> In the aftermath it was reported that Hamilton had been targeted by Luca di Montezemolo regarding a Ferrari drive for 2008.<ref>{{cite magazine|last=Cooper|first=Steve|date=August 2007|title=McLaren dream team turns into nightmare|magazine=Autosport|volume=189|issue=6|pages=6–8}}</ref>
+Spanningen kwammen opny an de oppervlakte by de hongaarske Grand Prix van 2007. Tydens de låtste kwalifikatsysessy vöär de race wyr Hamilton in de pitstråte vertråged döär Alonso en düs neet in ståt den låtsten rundetyd vöär et ende van de sessy neader too setten. McLaren marketen up dat Hamilton neet had ehöyrsåmd an ne eyrdere instruksy üm Alonso too låten passeren uut angst üm syne eigene positsy too verleesen. Alonso wyr terügesettet når de sesde plåtse van et startvak, wårdöär  Hamilton stegen når de eyrste plåtse (hy was öärsprünkelik tweyds ewörden in de kwalifikatsy), terwyl McLaren pünten in et kampioonskap vöär konstrukteurs wyr avenömmen. Hamilton seiden dat hy den strav vöär Alonso <nowiki>''</nowiki>vry lichte" vunden en allenig möyte had med et verlees van pünten van den konstrukteur. Et wyr emelded dat Hamilton teagen Dennis eskolden had oaver den teamradio nå et incident. Et britske autosporttydskrivt ''Autosport'' beweren dat dit "dertoo leidden dat Dennis synen koptelefoon warpeden teagen de pitmüür in avgünst (nen gebår dat döär velen wyr miseinterpreteerd as ne reaksy up et verlees van de eyrste startplåtse van Alonso)".Skonwal brachteden McLaren låter nen bericht uut in nåme van Hamilton dat eynig üngewenst tålgebruuk untkenneden. Döär disse geböärtenissen storteden de betrekkinge tüsken Hamilton en Alonso tydelik in, wårby de twey neet med mekare spraaken vöär nen körten tyd. In de nåsleppe wyr emelded dat Hamilton benådered was döär Luca di Montezemolo vöär et ryden by Ferrari in 2008.
 
-The rivalry between Hamilton and teammate Alonso led to speculation that one would leave McLaren at the end of the season.<ref>{{cite news|title=The future of Fernando Alonso|publisher=grandprix.com|url=http://www.grandprix.com/ns/ns19511.html|date=6 August 2007|accessdate=12 September 2007}}</ref><ref>{{cite news|title=Alonso cool on future at McLaren|publisher=BBC|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/6932307.stm|date=5 August 2007|accessdate=13 September 2007}}</ref><ref>{{cite news|title=Million dollar babies|first=Eddie|last=Irvine|authorlink=Eddie Irvine|work=[[Virgin Media]]|publisher=[[Virgin Group]]|url=http://www.virginmedia.com/sport/motorsport/formula1/features/eddie-irvine-12.php|date=8 August 2007|accessdate=17 August 2010}}</ref> Alonso and McLaren subsequently terminated their contract by mutual consent in November.<ref>{{cite news|title=Alonso secures exit from McLaren|publisher=BBC|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7074737.stm|date=2 November 2007|accessdate=2 November 2007|first=Andrew|last=Benson}}</ref>
+De rivaliteyt tüsken Hamilton en teammåt Alonso leidden töt de spekulåtsy dat eynen an et ende van et seisoon McLaren verlåten wyr. Alonso en McLaren beendigen dårup öär kontrakt med wedersydse oavereynstemming in november.
 
-==== 2008 season: Youngest-ever world champion ====
+==== Et seisoon van 2008: Jüngsten werldkampioon oit ====
 A month after Alonso's departure, it was confirmed that Heikki Kovalainen would drive the second car for McLaren-Mercedes in 2008 alongside Hamilton,<ref>{{cite web|url=http://www.f1fanatic.co.uk/2007/12/14/mclaren-set-to-confirm-heikki-kovalainen-for-2008/|title=McLaren confirm Heikki Kovalainen for 2008 (updated)|publisher=f1fanatic.co.uk|author=Collantine, Keith|date=14 December 2007|accessdate=31 August 2010}}</ref> who signed a new five-year multimillion-pound contract to stay with McLaren-Mercedes until the end of the 2012 season.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7196436.stm|title=Hamilton signs new McLaren deal|publisher=BBC Sport|date=18 January 2008|accessdate=31 August 2010}}</ref>
 [[Bestaand:Lewis_hamilton_-_2008_Melb_GP.jpg|links|duum|Hamilton won the first race of 2008 in Melbourne, Australia.]]
 Hamilton won the first race of the 2008 season, the Australian Grand Prix, having qualified on pole position.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7299130.stm|title=Hamilton wins dramatic F1 opener|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=16 March 2008|accessdate=20 November 2012}}</ref> In Malaysia, he finished fifth after he had started from ninth on the grid, serving a penalty for impeding Nick Heidfeld's qualifying lap.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7310226.stm|title=Räikkönen eases to Malaysia win|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=23 March 2008|accessdate=20 November 2012}}</ref><ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7309337.stm|title=McLaren duo punished for impeding|publisher=[[BBC Sport]]|date=22 March 2008|accessdate=20 November 2012}}</ref> He was back on the podium in Spain finishing third.<ref name="F1Fanatic 2008 Spanish Grand Prix review">{{cite news|last=Collantine|first=Keith|title=Räikkönen leads crushing Ferrari 1–2|url=http://www.f1fanatic.co.uk/2008/04/27/2008-spanish-grand-prix-review-raikkonen-leads-crushing-ferrari-1-2/|date=27 April 2008|accessdate=27 April 2007}}</ref> Hamilton finished second in Turkey,<ref>{{cite web|url=http://www.grandprix.com/race/r790racenotes.html|title=Massa wins Turkish GP for third straight year|publisher=grandprix.com|accessdate=31 August 2010|archive-url=https://web.archive.org/web/20090612093643/http://www.grandprix.com/race/r790racenotes.html|archive-date=12 June 2009|dead-url=yes|df=dmy-all}}</ref> and won the Monaco Grand Prix, putting him in the lead of the championship.<ref>{{cite web|url=http://www.f1fanatic.co.uk/2008/05/25/2008-monaco-grand-prix-review-ferrari-mistakes-let-lewis-hamilton-in-for-win/|title=2008 Monaco Grand Prix review: Ferrari mistakes let Lewis Hamilton in for win|publisher=f1fanatic.co.uk|author=Collantine, Keith|date=28 May 2008|accessdate=31 August 2010}}</ref> In Montreal, Hamilton crashed into the back of Räikkönen during the race, after failing to see that the Finn was waiting at a red light at the end of the pit lane as the whole field went past under the guide of the safety car. Both cars were forced to retire and Hamilton was given a 10-position grid penalty for the next race, the French Grand Prix.<ref>{{cite news|title=Kubica leads historic BMW 1–2 in Canada|first=Matt|last=Beer|url=http://www.autosport.com/news/report.php/id/68131|work=[[Autosport]]|date=8 June 2008|accessdate=20 November 2012|archiveurl=https://web.archive.org/web/20080710105046/http://www.autosport.com/news/report.php/id/68131|archivedate=10 July 2008}}</ref><ref>{{cite news|url=https://www.theguardian.com/sport/2008/jun/12/lewishamilton.formulaone|first=Alan|last=Henry|authorlink=Alan Henry|title=Hamilton bullish despite 10-place grid penalty|work=[[The Guardian]]|date=12 June 2008|accessdate=20 November 2012|location=London}}</ref> Despite an error in qualifying that saw him start fourth on the grid, Hamilton went on to win the British Grand Prix in difficult, wet conditions in a performance regarded as one of the best of his career so far.<ref name="BBC News British Grand Prix">{{cite news|last=Benson|first=Andrew|title=BBC Sport at Silverstone|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7492145.stm|date=6 July 2008|accessdate=6 June 2008|publisher=BBC News}}</ref> In the next race at Hockenheim, Hamilton won the race despite a tactical blunder by his team's strategists.<ref>{{cite web|url=http://www.f1fanatic.co.uk/2008/07/20/lewis-hamilton-wins-despite-strategy-blunder-2008-german-gp-review/|title=Lewis Hamilton wins despite strategy blunder (2008 German GP review)|publisher=f1fanatic.co.uk|author=Collantine, Keith|date=20 July 2008|accessdate=31 August 2010}}</ref>
@@ -1163,3 +1163,4 @@ Hamilton holds the following records in [//en.wikipedia.org/wiki/List_of_Formula
 |128
 |}
 <br />
+<references />
